--- a/iGlobo/ControladorRepresentacionGlobo.xib
+++ b/iGlobo/ControladorRepresentacionGlobo.xib
@@ -83,6 +83,7 @@
 								<string key="NSFrame">{{20, 46}, {366, 29}}</string>
 								<reference key="NSSuperview" ref="339899832"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:328</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
