--- a/iGlobo/CeldagraficaBarras.xib
+++ b/iGlobo/CeldagraficaBarras.xib
@@ -32,20 +32,19 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="984627450">
+			<object class="IBUITableViewCell" id="451551500">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="363265060">
-						<reference key="NSNextResponder" ref="984627450"/>
+					<object class="IBUIView" id="446457825">
+						<reference key="NSNextResponder" ref="451551500"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIView" id="236196881">
-								<reference key="NSNextResponder" ref="363265060"/>
+							<object class="IBUIView" id="84314162">
+								<reference key="NSNextResponder" ref="446457825"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{43, 1}, {217, 9}}</string>
-								<reference key="NSSuperview" ref="363265060"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="446457825"/>
 								<string key="NSReuseIdentifierKey">_NS:212</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">10</int>
@@ -4434,7 +4433,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 												</object>
 											</array>
 										</array>
-										<object class="NSColor" key="NSColor" id="368960098">
+										<object class="NSColor" key="NSColor" id="888076823">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MCAwAA</bytes>
 										</object>
@@ -4443,13 +4442,12 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 								</object>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
-							<object class="IBUILabel" id="403582768">
-								<reference key="NSNextResponder" ref="363265060"/>
+							<object class="IBUILabel" id="420522516">
+								<reference key="NSNextResponder" ref="446457825"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{7, -5}, {42, 21}}</string>
-								<reference key="NSSuperview" ref="363265060"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="236196881"/>
+								<string key="NSFrame">{{7, -4}, {36, 21}}</string>
+								<reference key="NSSuperview" ref="446457825"/>
+								<reference key="NSNextKeyView" ref="84314162"/>
 								<string key="NSReuseIdentifierKey">_NS:345</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -4482,12 +4480,11 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{261, 9}</string>
-						<reference key="NSSuperview" ref="984627450"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="403582768"/>
+						<string key="NSFrameSize">{261, 10}</string>
+						<reference key="NSSuperview" ref="451551500"/>
+						<reference key="NSNextKeyView" ref="420522516"/>
 						<string key="NSReuseIdentifierKey">_NS:396</string>
-						<reference key="IBUIBackgroundColor" ref="368960098"/>
+						<reference key="IBUIBackgroundColor" ref="888076823"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
@@ -4495,14 +4492,13 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{261, 10}</string>
+				<string key="NSFrameSize">{261, 11}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="363265060"/>
+				<reference key="NSNextKeyView" ref="446457825"/>
 				<string key="NSReuseIdentifierKey">_NS:385</string>
-				<reference key="IBUIBackgroundColor" ref="368960098"/>
+				<reference key="IBUIBackgroundColor" ref="888076823"/>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-				<reference key="IBUIContentView" ref="363265060"/>
+				<reference key="IBUIContentView" ref="446457825"/>
 				<real value="10" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -4512,23 +4508,23 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">celdaBarras</string>
 						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="984627450"/>
+						<reference key="destination" ref="451551500"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rangoEdad</string>
-						<reference key="source" ref="984627450"/>
-						<reference key="destination" ref="403582768"/>
+						<reference key="source" ref="451551500"/>
+						<reference key="destination" ref="420522516"/>
 					</object>
 					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">contenedorGraficaBarra</string>
-						<reference key="source" ref="984627450"/>
-						<reference key="destination" ref="236196881"/>
+						<reference key="source" ref="451551500"/>
+						<reference key="destination" ref="84314162"/>
 					</object>
 					<int key="connectionID">8</int>
 				</object>
@@ -4554,22 +4550,22 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="984627450"/>
+						<reference key="object" ref="451551500"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="236196881"/>
-							<reference ref="403582768"/>
+							<reference ref="84314162"/>
+							<reference ref="420522516"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="236196881"/>
-						<reference key="parent" ref="984627450"/>
+						<reference key="object" ref="84314162"/>
+						<reference key="parent" ref="451551500"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="403582768"/>
-						<reference key="parent" ref="984627450"/>
+						<reference key="object" ref="420522516"/>
+						<reference key="parent" ref="451551500"/>
 					</object>
 				</array>
 			</object>
@@ -4589,59 +4585,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 			<nil key="sourceID"/>
 			<int key="maxID">9</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CeldaGraficaDeBarras</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="contenedorGraficaBarra">UIView</string>
-						<string key="rangoEdad">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="contenedorGraficaBarra">
-							<string key="name">contenedorGraficaBarra</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rangoEdad">
-							<string key="name">rangoEdad</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CeldaGraficaDeBarras.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ControladorListaBarras</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="celdaBarras">CeldaGraficaDeBarras</string>
-						<string key="porcentajeResultante">UILabel</string>
-						<string key="tablaDatos">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="celdaBarras">
-							<string key="name">celdaBarras</string>
-							<string key="candidateClassName">CeldaGraficaDeBarras</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="porcentajeResultante">
-							<string key="name">porcentajeResultante</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tablaDatos">
-							<string key="name">tablaDatos</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ControladorListaBarras.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
